v1.7 updating issues with navbar on mobile

--- a/background.css
+++ b/background.css
@@ -9,7 +9,7 @@
     z-index: -1;
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100svh;
     top: 0;
     left: 0;
     background: #edddfb;
