--- a/style.css
+++ b/style.css
@@ -18,27 +18,29 @@ body{
     font-variation-settings: "wdth" 100;
 }
 
-@media(max-width:1023px) {
+@media(max-width:1023px){
 
 
     section[id] {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         padding-top: 1rem;
         align-items: center;
     }
+
     p {
         font-family: Fredoka, cursive;
         text-align: center;
     }
 
-/* #HOME section*/
-    #home{
+    /* #HOME section*/
+    #home {
         justify-content: center;
         height: 100dvh;
         overflow: hidden;
     }
+
     .header {
         display: flex;
         flex-direction: column;
@@ -67,20 +69,25 @@ body{
         height: 13rem;
         overflow: hidden;
     }
-    h1{
+
+    h1 {
         font-size: 3.5rem;
         font-family: Fredoka, cursive;
     }
-    .hello{
+
+    .hello {
         font-size: 2.5rem;
         font-weight: bold;
         margin: 2rem auto 5px auto;
     }
-    .myNameIs{
+
+    .myNameIs {
         margin: 0 auto 2rem auto;
         font-weight: bold;
     }
-    #home > p{
+
+    #home > p {
+        background-color: #be96f5;
         font-size: clamp(18px, 3dvw, 5vw);
         margin: 2rem 4rem 3rem 4rem;
         font-weight: bold;
